cabal-version:      2.4
name:               Advent-of-Code2021
version:            0.1.0.0

-- A short (one-line) description of the package.
synopsis: Solutions to the 2021 instance of Advent of Code.

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Elisabeth Bonnevier

-- An email address to which users can send suggestions, bug reports, and patches.
maintainer: elisabeth@bonnevier.one

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md

executable Advent-of-Code2021
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.15.0.0
    hs-source-dirs:   src
    default-language: Haskell2010

executable day-1
    main-is: day-1/Main.hs
    build-depends:    base ^>=4.15.0.0
    hs-source-dirs:   src
    default-language: Haskell2010

executable day-2
    main-is: day-2/Main.hs
    build-depends:    base ^>=4.15.0.0
    hs-source-dirs:   src
    default-language: Haskell2010

executable day-3
    main-is: day-3/Main.hs
    build-depends:    base ^>=4.15.0.0
    hs-source-dirs:   src
    default-language: Haskell2010
